templates/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: $ARGOCD_DEPLOYMENT_NAME-https-passthrough
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`$ARGOCD_DEPLOYMENT_NAME.$PLATFORM.$DOMAIN_NAME`)
      services:
        - name: argocd-server
          port: 443
  tls:
    passthrough: true
