templates/headlamp-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: $DASHBOARD_DEPLOYMENT_NAME
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`$DASHBOARD_DEPLOYMENT_NAME.$PLATFORM.$DOMAIN_NAME`)
    kind: Rule
    services:
    - name: $DASHBOARD_DEPLOYMENT_NAME
      port: 80
